fix: Remove large files and complete project structure - Remove backend/package/ and function.zip from repository - Add complete .gitignore - Add database initialization scripts - Add missing Angular configuration files

--- a/.gitignore
+++ b/.gitignore
@@ -214,4 +214,11 @@ logs/
 
 # Local configuration
 config.local.*
-.env.local
+.env.localbackend/package/
+deploy/function.zip
+node_modules/
+
+# Colombia Explora - Dependencies
+backend/package/
+deploy/function.zip
+node_modules/
